07112013 -> jonnyboy -> fixed bug in tmux-seq when not running any backfill
						fixed bug in postback, when reconnecting to nntp, need to set group name first
07112013 -> kevin    -> added the new regexes to namecleaning releaseCleaner, removed the "universal" one from the groups.
						changed the group regexes in releaseCleaner to make sure they don't match on other groups.
						make sure exe doesn't get into tv.
						Added alt.binaries.multimedia.anime to releaseCleaner.
						Changed collectionsCleaner so in the future it can do groups.
07112013 -> jonnyboy -> added 'trim' to releases name in nzb-import and grabNZBs
						fixed bug in postprocess.php
						beginning the move of pre/requestID matching to release creation, instead of separate process later
07102013 -> jonnyboy -> fixed bug in backfill causing some issue with nntp stall
						moved python lib files
07092013 -> jonnyboy -> added limit clause when running populate gids from tmux
						added query to grabnzbs that appear incomplete but are older than 2 hours
						fixed bug in grabznbs creating gid at same time as update_releases
						changed poster to fromname delete_releases.php
						added nzbstatus check for gid creation
						added db connect string to start of loop in monitor.php, should help the with disabled by running issues
						updated start.php to latest patch
07072013 -> jonnyboy -> added update_relases run when have exceeded limits in seq
						updated all python scripts, put closing stuffin in main(), removed thread deamon's was causing shutdown issues with 2.*
						added gid to grabzbs and import threaded scripts, still need to add to non threaded
						updated monitor predb to match the other totals, fixed typo in populate_nzb_guid.php
						tmux - removed unneeded/unused timers
07072013 -> Miatrix  -> Added populate_nzb_guid.php in the misc/testing/DB_scripts folder to update existing releases with the guid